--- a/Alura/curso5/styles.css
+++ b/Alura/curso5/styles.css
@@ -120,6 +120,8 @@ body{
     color: var(--branco-titulo);
 }
 
+
+
 .rodape{
     display: flex;
     flex-direction: column;
@@ -132,7 +134,7 @@ body{
 }
 
 .rodape__logo{
-    width: 8%;
+    
     margin-bottom: 1em;
 }
 
@@ -144,13 +146,53 @@ body{
 }
 
 
+
+
 .lista__link{
     font-size: 16px;
     color: var(--branco-titulo);
     text-decoration: none;
 }
 
+.lista__link:hover{
+    color: var(--botao);
+}
+
 .rodape__texto{
     color:var(--cinza);
     font-size: 14px;
+}
+
+@media screen and (max-width:768px){
+    .container{
+        display: block;
+        background-image: none;
+
+    }
+
+    .container__imagem{
+        width:50vw;
+    }
+
+    .container__caixa{
+        margin: 2em;
+    }
+
+    .secundario{
+        margin:0;
+        text-align: center;
+    }
+    .secundario__imagem{
+        width:50vw;
+    }
+
+    .dispositivos__lista{
+        display:block;
+    }
+
+    .rodape__lista{
+        display:block;
+    }
+
+    
 }
