--- a/Alura/curso6/styles.css
+++ b/Alura/curso6/styles.css
@@ -1,32 +1,21 @@
 @import url(styles/header.css);
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,900&display=swap');
 
 :root{
     --cor-fundo: #EBECEE;
     --branco: #FFFFFF;
     --azul:#002F52;
-    --amarelo:#EB9B00;
+    --laranja:#EB9B00;
     --preto: rgba(0,0,0,0.85);
     --cinza:#C4C4C4 ;
+    --azul-degrade: linear-gradient(97.54deg, #002F52 35.49%, #326589 165.37%);
+    --fonte-principal: 'Poppins', sans-serif;
 }
 
 body{
     background-color: var(--cor-fundo);
+    font-family: var(--fonte-principal);
+    font-size: 16px;
+    font-weight: 400;
 
-}
-
-.cabecalho{
-    background-color: var(--branco);
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    
-}
-
-.container{
-    display: flex;
-    align-items: center;
-}
-
-.container__imagem{
-    padding: 1em;
 }
