--- a/Alura/curso6/styles/carrossel.css
+++ b/Alura/curso6/styles/carrossel.css
@@ -11,8 +11,78 @@
     width: 100%;
 
 }
+/*Juntos, .carrossel .swiper-button-prev seleciona qualquer elemento que tenha a classe swiper-button-prev e que seja um descendente de um elemento com a classe carrossel.*/
 
-.swiper-button-prev, 
-.swiper-button-next{
-    display: none;
+.carrossel .swiper-button-prev, /*usar seletor mais especifico ou !important*/
+.carrossel .swiper-button-next{
+    display: none ;
+}
+
+.carrossel .swiper-pagination{
+    position: initial;
+    margin: 0.5em 0;
+}
+
+.card{
+    background-color: var(--branco);
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    border-radius: 10px;
+    margin: 1.5em;
+    padding: 1em;
+    
+}
+.card__descricao{
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 0.5em;
+    
+}
+
+.card__botoes{
+    display: flex;
+    justify-content: space-between;
+}
+
+.botoes{
+    display: flex;
+    
+}
+
+.descricao__titulo{
+    color:var(--laranja);
+    font-weight: 700;
+
+}
+
+.descricao__titulo-livro{
+    font-size: 18px;
+    font-weight: 700;
+    color: var(--azul);
+    margin:0.5em 0;
+}
+
+.descricao__texto{
+    font-size: 14px;
+}
+
+.botoes__itens{
+    margin: 0 0.5em;
+}
+
+.botoes__ancora{
+    background-color: var(--laranja);
+    color: var(--branco);
+    text-decoration: none;
+    font-weight: 700;
+    text-align: center;
+    padding: 1em 2.8em;
+    
+}
+
+.descricao__texto{
+    margin: 0 0.2em 0 0;
+}
+
+.descricao__pontuacao{
+    width: 60%;
 }
