--- a/Alura/curso6/styles/banner.css
+++ b/Alura/curso6/styles/banner.css
@@ -36,3 +36,17 @@
     background-position:1em;
     
 }
+
+@media screen and (min-width: 1024px){
+    .banner__titulo{
+        font-size: 36px;
+    }
+    .banner__pesquisa::placeholder{
+        background-position:7em;
+        font-size: 16px;
+    }
+    .banner__pesquisa{
+        width: 50%;
+    }
+
+}
