--- a/Alura/curso6/styles/header.css
+++ b/Alura/curso6/styles/header.css
@@ -57,3 +57,59 @@
 .container__botao{
     display:none;
 }
+
+.container__titulo, .opcoes {
+display: none;
+}
+
+
+@media screen and (min-width: 1024px){
+    .container__titulo, .container__titulo--negrito{
+        font-family: var(--fonte-secundaria);
+        font-size:30px ;
+    }
+
+    .container__titulo {
+        display: block;
+        font-weight: 400;
+    }
+    .container__titulo--negrito {
+        font-weight: 700;
+    }
+
+    .opcoes{
+        display: flex;
+    }
+
+    .opcoes__item, .opcoes__link{
+        text-decoration: none;
+        color: var(--preto);
+        text-transform: uppercase;
+        padding: 0 1em;;
+    }
+
+    .opcoes__botao:checked ~ .lista-menu{
+        display: block;
+        width: auto;
+    }
+
+    .opcoes__botao{
+        display: none;;
+    }
+
+    .opcoes__item :hover{
+        background: var(--azul-degrade);
+        color: var(--branco);
+    }
+
+    .opcoes__link:hover{
+        background: var(--azul-degrade);
+        color: var(--branco);
+    }
+
+    .container__imagem-transparente, .cabecalho__menu-hamburguer{
+        display: none;
+        
+    }
+
+}
