--- a/Alura/curso6/styles/contato.css
+++ b/Alura/curso6/styles/contato.css
@@ -1,7 +1,6 @@
 .contato{
     background-color: var(--branco);
     padding: 1em;
-    display: ;
 }
 
 .contato__texto,
@@ -19,7 +18,7 @@
     font-weight: 500;
 }
 
-.contato__texto{
+.contato .contato__texto{
     font-weight: 300;
     margin: 1em 0;
 }
@@ -44,3 +43,25 @@
     background: url(../img/Email.svg) no-repeat;
     background-position: 1em;
 }
+
+@media screen and (min-width: 1024px){
+
+    .contato{
+        display: flex;
+        align-items: center;
+        justify-content: space-around;
+        padding: 2em;
+    }
+    
+    .contato__titulo{
+        font-size: 24px;
+    }
+
+    .contato__email{
+        width: 30%;
+    }
+
+
+}
+    
+    
