--- a/Alura/curso6/styles/topicos.css
+++ b/Alura/curso6/styles/topicos.css
@@ -28,3 +28,13 @@
     background-color: var(--laranja);
     padding: 1em;
 }
+
+@media screen and (min-width: 1024px){
+    .topicos__titulo{
+        font-size: 24px;
+    }
+
+    .topicos__link{
+        font-size: 24px;
+    }
+}
