--- a/Alura/curso6/styles/contato.css
+++ b/Alura/curso6/styles/contato.css
@@ -63,5 +63,14 @@
 
 
 }
-    
+
+@media screen and (min-width: 1440px){
+    .contato{
+        padding: 3em 20vw;
+    }
+
+    .contato__titulo{
+        font-size: 32px;
+    }
+}
     
