--- a/Alura/curso6/styles/topicos.css
+++ b/Alura/curso6/styles/topicos.css
@@ -38,3 +38,13 @@
         font-size: 24px;
     }
 }
+
+@media screen and (min-width: 1440px){
+    .topicos{
+        padding: 3em 30vw;
+    }
+
+    .topicos__titulo{
+        font-size: 32px;
+    }
+}
