--- a/Alura/curso6/styles/header.css
+++ b/Alura/curso6/styles/header.css
@@ -7,6 +7,14 @@
     background-position: center;
 }
 
+.container__botao:checked ~ .container__rotulo > .cabecalho__menu-hamburguer{
+    background-image: url(../img/MenuAberto.svg);
+}
+
+.container__botao:checked ~ .container__rotulo{
+    background: var(--azul-degrade);
+}
+
 .cabecalho{
     background-color: var(--branco);
     display: flex;
@@ -97,14 +105,24 @@
         display: none;;
     }
 
-    .opcoes__item :hover{
+
+
+    .opcoes__botao:checked ~ .opcoes__rotulo > .opcoes__item{
         background: var(--azul-degrade);
         color: var(--branco);
     }
 
-    .opcoes__link:hover{
+    .opcoes__item{
+        padding: 2em 1em;
+    }
+
+    .lista-menu__item:hover{
         background: var(--azul-degrade);
-        color: var(--branco);
+    }
+
+    .lista-menu__item:hover > .lista-menu__link{
+        -webkit-text-fill-color: var(--branco);
+        text-decoration: none;
     }
 
     .container__imagem-transparente, .cabecalho__menu-hamburguer{
