--- a/Alura/curso7/css/flexbox.css
+++ b/Alura/curso7/css/flexbox.css
@@ -1,36 +1,37 @@
 /* CABEÇALHO */
-.cabecalho__container{
+.cabecalho__container {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    position:fixed; /*fixar o container no topo*/
+    position: fixed;
+    /*fixar o container no topo*/
     top: 0px;
 }
 
-.cabecalho__pesquisar__item{
+.cabecalho__pesquisar__item {
     display: none;
 }
 
 
 /* MENU */
-.menu__container{
+.menu__container {
     position: fixed;
     bottom: 0;
     height: 74px;
     width: 100%;
 }
 
-.menu__lista{
+.menu__lista {
     display: flex;
     justify-content: space-around;
     height: 100%;
 }
 
-.menu__lista li{
+.menu__lista li {
     align-self: center;
 }
 
-.menu__itens{
+.menu__itens {
     display: flex;
     flex-direction: column;
     gap: 0.5em;
@@ -38,22 +39,23 @@
 
 .menu__lista:nth-child(2),
 .menu__lista:nth-child(3),
-.menu__lista:nth-child(4){
+.menu__lista:nth-child(4) {
     display: none;
 }
 
 /* SUPERIOR-SEÇÃO */
 
-.superior__secao__container{
+.superior__secao__container {
     display: flex;
     align-items: center;
-    white-space: nowrap; /*não quebrar o texto*/
+    white-space: nowrap;
+    /*não quebrar o texto*/
     overflow: scroll;
     gap: 15px;
 }
 
 /* RODAPE  */
-.rodape__container{
+.rodape__container {
     display: flex;
     /*flex-direction: column;
     flex-wrap: wrap;*/
@@ -62,38 +64,100 @@
     align-items: center;
 }
 
-.rodape__teste{
+.rodape__teste {
     margin-top: 1em;
 }
 
-@media (min-width:834px){
-    /* CABEÇALHO */
-    .cabecalho__pesquisar__item{
-    display: block;
+/*VIDEO*/
+
+.videos__container{
+    display: flex;
+    flex-wrap: wrap;
+    gap: 10px;
+
 }
 
+.videos__item {
+    height: 303px;
+    width: 280px;
+    flex-grow: 1;
+}
+
+
+
+@media (min-width:834px) {
+
+    /* CABEÇALHO */
+    .cabecalho__pesquisar__item {
+        display: block;
+    }
+
     /* RODAPÉ */
-    .rodape__container{
+    .rodape__container {
         justify-content: space-between;
     }
 
-    .rodape__teste{
+    .rodape__teste {
         margin-top: 0;
     }
 
     /* MENU */
 
-    .menu__container{
+    .menu__container {
         left: 0;
         height: auto;
         width: 74px;
         top: 80px;
 
     }
-    .menu__lista{
+
+    .menu__lista {
         flex-direction: column;
         justify-content: flex-start;
         gap: 32px;
     }
 }
 
+@media (min-width: 1440px) {
+
+    /* MENU */
+    .menu__container {
+        width: 239px;
+        overflow: scroll;
+
+    }
+
+    .menu__lista:nth-child(2),
+    .menu__lista:nth-child(3),
+    .menu__lista:nth-child(4) {
+        display: flex;
+    }
+
+    .menu__lista{
+        height: auto;
+        padding: 20px 17px 20px 15px;
+        gap: 15px;
+    }
+
+    .menu__itens{
+        flex-direction: row;
+        gap: 15px;
+        align-items: center;
+        
+    }
+
+    .menu__lista:nth-child(3){
+        flex-direction: column-reverse;
+    }
+
+    .menu__lista:nth-child(4){
+        flex-direction: column-reverse;
+    }
+
+    .jogos{
+        order: 2;
+    }
+    .maispagina{
+        order:3;
+    }
+}
